fix svg clipping error

--- a/src/styles.css
+++ b/src/styles.css
@@ -10,6 +10,23 @@
     --margin-top-bottom: 50px;
 }
 
+:root{
+    --background-color: rgb(255, 251, 239);
+    --header-footer-color: teal;
+    --text-color: black;
+    --theme-name: "light"
+}
+
+@media (prefers-color-scheme: dark)
+{
+    :root {
+        --background-color: rgb(32, 32, 32);
+        --header-footer-color: rgb(0, 0, 105);
+        --text-color: white;
+        --theme-name: "dark";
+    }
+}
+
 :root.light{
     --background-color: rgb(255, 251, 239);
     --header-footer-color: teal;
@@ -24,13 +41,13 @@
 
 
 * {
-
     margin:0px;
 }
 
 @import 'styles/header.css';
 @import 'styles/main.css';
 @import 'styles/footer.css';
+
 
 .image{
     height: 200px;
